Change difference_days to fractional value
This change updates the calculation on the max-min `parse_time` to return a fractional number of days.

--- a/config/federation/bigquery/bq_gardener_parse_time.sql.template
+++ b/config/federation/bigquery/bq_gardener_parse_time.sql.template
@@ -8,7 +8,7 @@
 --       in days, labeled with the dataset name.
 
 SELECT
-  TIMESTAMP_DIFF(max_parse_time, min_parse_time, DAY) AS value_difference_days,
+  TIMESTAMP_DIFF(max_parse_time, min_parse_time, SECOND) / 86400.0 AS value_difference_days,
   dataset
 FROM (
     SELECT
