--- a/k8s/prometheus-federation/deployments/snmp-exporter.yml
+++ b/k8s/prometheus-federation/deployments/snmp-exporter.yml
@@ -3,7 +3,8 @@ kind: Deployment
 metadata:
   name: snmp-exporter
 spec:
-  replicas: 1
+  # Run two so that we can make sure we have failover.
+  replicas: 2
   selector:
     matchLabels:
       run: snmp-exporter
@@ -14,11 +15,70 @@ spec:
       annotations:
         prometheus.io/scrape: 'true'
     spec:
+      # Pull the snmp-exporter configuration early so that it starts.
+      initContainers:
+      - image: measurementlab/gcp-service-discovery:v1.0
+        name: service-discovery
+        args: [ "--http-target=/config/snmp.yml",
+                "--http-source=https://storage.googleapis.com/switch-config-{{GCLOUD_PROJECT}}/snmp_exporter_config.yaml",
+                "--project={{GCLOUD_PROJECT}}"]
+        resources:
+          requests:
+            memory: "150Mi"
+            cpu: "50m"
+          limits:
+            memory: "150Mi"
+            cpu: "50m"
+        volumeMounts:
+        # Mount prometheus-storage for write access to the snmp_exporter configuration.
+        - mountPath: /config
+          name: prometheus-storage
+          subPath: snmp-exporter
       containers:
-      - name: snmp-exporter
-        image: prom/snmp-exporter:v0.13.0
+      - image: prom/snmp-exporter:v0.13.0
+        name: snmp-exporter
         ports:
         - containerPort: 9116
+        volumeMounts:
+        - mountPath: /etc/snmp_exporter
+          name: prometheus-storage
+          subPath: snmp-exporter
+      # Pull the snmp-exporter configuration again so that we can watch it.
+      - image: measurementlab/gcp-service-discovery:v1.0
+        name: service-discovery
+        args: [ "--http-target=/config/snmp.yml",
+                "--http-source=https://storage.googleapis.com/switch-config-{{GCLOUD_PROJECT}}/snmp_exporter_config.yaml",
+                "--project={{GCLOUD_PROJECT}}"]
+        resources:
+          requests:
+            memory: "150Mi"
+            cpu: "50m"
+          limits:
+            memory: "150Mi"
+            cpu: "50m"
+        volumeMounts:
+        # Mount prometheus-storage for write access to the snmp_exporter configuration.
+        - mountPath: /config
+          name: prometheus-storage
+          subPath: snmp-exporter
+      # Check https://hub.docker.com/r/jimmidyson/configmap-reload/tags/ for the current
+      # stable version.
+      - image: jimmidyson/configmap-reload:v0.2.2
+        name: configmap-reload
+        args: ["-webhook-url", "http://snmp-exporter.default.svc.cluster.local:9116/-/reload",
+               "-volume-dir", "/config"]
+        resources:
+          requests:
+            memory: "400Mi"
+            cpu: "200m"
+          limits:
+            memory: "400Mi"
+            cpu: "200m"
+        volumeMounts:
+        # Mount the snmp-exporter config volume so we can watch it for changes.
+        - mountPath: /config
+          name: prometheus-storage
+          subPath: snmp-exporter
       # The snmp-exporter will only be scheduled onto nodes that we labeled
       # as having a static outbound IP.
       nodeSelector:
