--- a/k8s/prometheus-federation/deployments/kubeip.yml
+++ b/k8s/prometheus-federation/deployments/kubeip.yml
@@ -28,21 +28,10 @@ spec:
             value: "prometheus-federation"
           - name: "KUBEIP_NODEPOOL"
             value: "static-outbound-ip"
-          - name: GOOGLE_APPLICATION_CREDENTIALS
+          - name: "GOOGLE_APPLICATION_CREDENTIALS"
             value: /var/secrets/google/key.json
         restartPolicy: Always
         serviceAccountName: kubeip
-        # kubeIP will only be scheduled onto nodes that we labeled
-        # as having a static outbound IP.
-        nodeSelector:
-          outbound-ip: static
-        # We can also taint nodes with static outbound IPs so that services that
-        # do not require a static IP aren't scheduled to that node. This 
-        # deployment, however, will tolerate that taint.
-        tolerations:
-        - key: "outbound-ip"
-          value: "static"
-          effect: "NoSchedule"
         volumes:
           - name: google-cloud-key
             secret:
