--- a/k8s/prometheus-federation/deployments/snmp-exporter.yml
+++ b/k8s/prometheus-federation/deployments/snmp-exporter.yml
@@ -56,7 +56,7 @@ spec:
       # stable version.
       - image: jimmidyson/configmap-reload:v0.2.2
         name: configmap-reload
-        args: ["-webhook-url", "http://snmp-exporter.default.svc.cluster.local:9116/-/reload",
+        args: ["-webhook-url", "http://localhost:9116/-/reload",
                "-volume-dir", "/config"]
         resources:
           requests:
