--- a/k8s/prometheus-federation/deployments/kubeip.yml
+++ b/k8s/prometheus-federation/deployments/kubeip.yml
@@ -31,7 +31,7 @@ spec:
             # Nodepool to which KubeIP assigns addresses
           - name: "KUBEIP_NODEPOOL"
             value: "static-outbound-ip"
-            # GCP Application Default Credentials (ADS)
+            # GCP Application Default Credentials (ADC)
             # See: https://cloud.google.com/docs/authentication/production
           - name: "GOOGLE_APPLICATION_CREDENTIALS"
             value: /var/secrets/google/key.json
