--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ go:
 
 # Unconditionally place the repo at GOPATH/src/${go_import_path} to support
 # forks.
+# NOTE: This break go lint.
 go_import_path: github.com/m-lab/prometheus-support
 
 install:
@@ -18,11 +19,15 @@ install:
   # Install kexpand templating tool. Only works from HEAD.
 - go get github.com/kopeio/kexpand
 - $TRAVIS_BUILD_DIR/travis/install_gcloud.sh kubectl
+  # Install jsonlint
+- npm install jsonlint -q
 
 script:
 # Run query "unit tests".
 - go test -v github.com/m-lab/prometheus-support/cmd/query_tester -args
 
+# Validate all json
+- find . -name "*.json" | xargs jsonlint -q
 # Use promtool to check current alerts and rules. This is only a syntax check.
 - promtool check rules config/federation/prometheus/alerts.yml
 - promtool check rules config/federation/prometheus/rules.yml
