--- a/.travis.yml
+++ b/.travis.yml
@@ -19,15 +19,16 @@ install:
   # Install kexpand templating tool. Only works from HEAD.
 - go get github.com/kopeio/kexpand
 - $TRAVIS_BUILD_DIR/travis/install_gcloud.sh kubectl
-  # Install jsonlint
-- npm install jsonlint -q
+  # Install jsonlint (use npm which is lightweight and actually works)
+- npm install jsonlint -g
 
 script:
 # Run query "unit tests".
 - go test -v github.com/m-lab/prometheus-support/cmd/query_tester -args
 
 # Validate all json
-- find . -name "*.json" | xargs jsonlint -q
+- which jsonlint
+- git ls-files | grep '\.json$' | xargs jsonlint -q
 # Use promtool to check current alerts and rules. This is only a syntax check.
 - promtool check rules config/federation/prometheus/alerts.yml
 - promtool check rules config/federation/prometheus/rules.yml
